--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -203,7 +203,8 @@ body {
 
 #title-text-top,
 #title-text-bot {
-  color: var(--loser);
+  /* color: var(--loser); */
+    color: green;
   font-size: 2.25rem;
   text-transform: uppercase;
 }
@@ -557,15 +558,6 @@ body {
     --width-master: 25rem;
     --gif-variable: 3rem;
     --height-width-gif: calc(var(--width-master) - var(--gif-variable));
-    --message-height: 7.5rem;
-  }
-
-  #messages {
-    height: var(--message-height);
-    align-items: start;
-  }
-  #message-bar {
-    padding: 0.5rem 0.5rem 0.5rem 0.75rem;
   }
 }
 
@@ -606,7 +598,13 @@ body {
   }
 
   #messages {
+    height: var(--message-height);
+    align-items: start;
     margin-top: 1rem;
+  }
+
+  #message-bar {
+    padding: 0.5rem 0.5rem 0.5rem 0.75rem;
   }
 
   #main-btn-container {
