--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -99,6 +99,7 @@
   margin: 0.25rem 0 0.25rem 0;
   outline: none;
   padding: 0.125rem;
+  transition: .5s;
 }
 
 .btn-a:hover {
@@ -137,6 +138,7 @@
   margin: 0.3rem;
   outline: none;
   padding: 0.25rem;
+  transition: .5s;
 }
 
 .btn-b:hover {
@@ -377,6 +379,7 @@ body {
 .all-p2-place-ships {
   /* Key Item: SVG ship height */
   height: var(--height-svg-ship);
+  transition: .5s;
 }
 
 .all-p1-place-ships:hover,
