--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -99,7 +99,7 @@
   margin: 0.25rem 0 0.25rem 0;
   outline: none;
   padding: 0.125rem;
-  transition: .5s;
+  transition: background-color 0.5s ease, transform 0.5s ease;
 }
 
 .btn-a:hover {
@@ -138,7 +138,7 @@
   margin: 0.3rem;
   outline: none;
   padding: 0.25rem;
-  transition: .5s;
+  transition: background-color 0.5s ease, transform 0.5s ease;
 }
 
 .btn-b:hover {
@@ -379,7 +379,7 @@ body {
 .all-p2-place-ships {
   /* Key Item: SVG ship height */
   height: var(--height-svg-ship);
-  transition: .5s;
+  transition: transform 0.5s ease;
 }
 
 .all-p1-place-ships:hover,
@@ -516,10 +516,12 @@ body {
 .hit-miss-cells2,
 .hit-miss-target-cells1,
 .hit-miss-target-cells2 {
+  transition: transform 1s ease;
   /* TESTING - APPLE BROWSERS ARE NOT SHOWING EMOJIS CONSISTENTLY, BELOW IS AN ATTEMPT TO REMEDY (AMONG OTHER SOLUTIONS TRIED ELSEWHERE) */
   visibility: visible !important;
   -webkit-transform:translate3d(0,0,0);
   z-index: 1;
+
 }
 
 .ship {
