at screen width >= 600px, messages are now of a fixed height

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -574,6 +574,7 @@ body {
 @media only screen and (width >= 600px) {
   :root {
     --width-master: 26rem;
+    --height-messages: 6.5rem;
   }
 
   html,
@@ -607,6 +608,8 @@ body {
   }
 
   #messages {
+    height: var(--height-messages);
+    align-items: start;
     margin-top: 0.6rem;
   }
 
